# english-word-learning-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pages/: 1_review.py
